--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ main {
 .icon img {
   height: 100px;
   width: 100%;
-  border-radius: 15px;
+  border-radius: 13px;
 }
 
 .icon.active {
@@ -140,6 +140,8 @@ main {
   margin-right: 35px;
   margin-left: 35px;
   font-size: 25px;
+  width: 55px;
+  text-align: center;
 }
 
 .add button {
