--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ body {
 nav {
   display: flex;
   align-items: center;
-
+  border-bottom: 3px solid;
+  padding-bottom: 10px;
 }
 
 nav ul {
@@ -28,12 +29,27 @@ nav div {
   margin-left: 10px;
 }
 
+.right-area {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 13%;
+}
+
+.cart {
+  margin-inline-end: 20px;
+}
+
+.profile {
+  height: 45px;
+}
+
 main {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 75%;
+  width: 1100px;
   height: auto;
   display: flex;
   align-items: center;
@@ -131,17 +147,12 @@ main {
   align-items: center;
 }
 
-.add > div {
-  margin-right: 5px;
-  margin-left: 5px;
-}
-
 .amount {
-  margin-right: 35px;
-  margin-left: 35px;
   font-size: 25px;
   width: 55px;
   text-align: center;
+  background-color: #e6e6e6;
+  padding: 3px 10px;
 }
 
 .add button {
@@ -150,12 +161,29 @@ main {
   border: none;
   border-radius: 15px;
   background-color: hsl(26, 100%, 55%);
+  box-shadow: 0 10px 35px 5px hsla(26, 100%, 55%, .4);
   color: white;
   font-size: 15px;
   margin-left: auto;
   margin-right: 20px;
 }
 
-.minus {
-    margin-bottom: 5px;
+.add button:hover {
+  cursor: pointer;
+}
+
+.subtract {
+    padding: 17px 10px;
+    margin-top: 5px;
+    background-color: #e6e6e6;
+}
+
+#add {
+  padding: 13px;
+  margin-top: 5px;
+  background-color: #e6e6e6;
+}
+
+.subtract, #add {
+  cursor: pointer;
 }
