--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,14 @@ main {
   align-items: center;
 }
 
+.menu {
+  display: none;
+}
+
+.img img {
+  margin-left: -20px;
+}
+
 .left,
 .right {
   margin: 30px;
@@ -186,4 +194,79 @@ main {
 
 .subtract, #add {
   cursor: pointer;
+}
+
+@media screen and ( max-width: 414px) {
+  nav {
+    border: none;
+    padding: 0;
+    width: 100vw;
+  }
+
+  nav ul {
+    display: none;
+  }
+
+  main {
+    flex-direction: column;
+    top: 76%;
+    width: 100vw;
+  }
+
+  .menu {
+    display: inline-block;
+    position: absolute;
+    left: 32px;
+    top: 25px;
+    width: 22px;
+  }
+
+  .logo {
+    margin-top: 12px;
+    position: relative;
+    left: 2px;
+  }
+
+  .right-area {
+    right: 10px;
+    top: 12px;
+  }
+
+  .left {
+    position: relative;
+    top: -65px;
+    width: 100vw;
+  }
+
+  .image, .image img {
+    width: 100vw;
+    border-radius: 0;
+  }
+
+  .right {
+    max-width: 100vw;
+    margin: 10px;
+    margin-top: -80px;
+  }
+
+  .image-icons {
+    max-width: 100vw;
+    position: relative;
+    left: 0px;
+    margin: 0;
+  }
+
+  .icon, .icon img {
+    height: 85px;
+  }
+
+  .original {
+    position: relative;
+    top: -38px;
+    left: 320px;
+  }
+
+  .attribution {
+    display: none;
+  }
 }
