--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ main {
 .image-icons {
   display: flex;
   margin-top: 10px;
+  max-width: 100%;
 }
 
 .icon {
@@ -522,11 +523,12 @@ main {
   main {
     margin-top: -50px;
     left: 195px;
+    width: 100vw;
   }
 
   .left {
     top: -10px;
-    left: 0px;
+    left: 0;
     width: 100vw;
     padding: 0;
   }
@@ -541,19 +543,22 @@ main {
 }
 
 @media screen and (max-width: 375px) {
+  .right-area {
+    left: 270px;
+  }
+
   main {
     width: 100vw !important;
     margin-left: -5px;
   }
 
   .left {
-    top: 65px;
-    left: -1px;
-    border: 1px solid;
+    top: -75px;
+    left: -3px;
   }
 
   .right {
-    margin-top: 220px;
+    margin-top: -70px;
   }
 
   .image,
@@ -574,7 +579,7 @@ main {
     width: 355px;
     margin: 0;
     left: 175px;
-    margin-top: -75px;
+    margin-top: -200px;
     border: 1px solid;
   }
 
@@ -587,7 +592,6 @@ main {
   .image, .image img {
     height: 350px;
     width: 100vw;
-    border: 1px solid;
     margin: 0;
   }
 
